# SAMforFEM

./: CMakeLists.txt  README.md
doc/: architecture.xls  ~$09_07_16 libraries installation and other.doc
include/: FemAbaqusInpWriter.h  FemAssigner.h  FemAssignerElements.h  FemAssignerNodes.h  FemForce.h  ImageHandler.h  ImageHandlerFloat.h  MainWindow.h  MeshBoneImplantFitting.h  MeshExtractOuterSurface.h  MeshMorpherPointPropagation.h  MeshMorpherValidationSurface.h  MeshMorpherValidationVolume.h  MeshQuality.h  MeshReader.h  MeshReaderAbaqus.h  MeshReaderMorpherSurface.h  MeshReaderMorpherVolume.h  MeshReaderNeutralFormat.h  MeshSimplifyAndSmooth.h  MeshWriter.h  MeshWriterAbaqus.h  MeshWriterAbaqusYmEl.h  MeshWriterAnsys.h  MeshWriterMorpherVolume.h  PCA.h  PCAImageGeneralization.h  PCAImageSpecificity.h  PCAImageValidation.h  PCAImages.h  PCAMesh.h  PointReader.h  PointReaderXyz.h  PointReaderXyzId.h  PointWriter.h  PointWriterMorpherXml.h  PointWriterXyz.h  PointWriterXyzId.h  PointWriterXyzVector.h  RegistrationProcrustesAlignment.h  (+29 more)
src/: FemAbaqusInpWriter.cxx  FemAssigner.cxx  FemAssignerElements.cxx  FemAssignerNodes.cxx  FemForce.cxx  ImageHandler.cxx  ImageHandlerFloat.cxx  Main.cxx  MainWindow.cxx  MeshBoneImplantFitting.cxx  MeshExtractOuterSurface.cxx  MeshMorpherPointPropagation.cxx  MeshMorpherValidationVolume.cxx  MeshQuality.cxx  MeshReader.cxx  MeshReaderAbaqus.cxx  MeshReaderMorpherSurface.cxx  MeshReaderMorpherVolume.cxx  MeshReaderNeutralFormat.cxx  MeshSimplifyAndSmooth.cxx  MeshWriter.cxx  MeshWriterAbaqus.cxx  MeshWriterAnsys.cxx  PCA.cxx  PCAImageGeneralization.cxx  PCAImageSpecificity.cxx  PCAImageValidation.cxx  PCAImages.cxx  PCAMesh.cxx  PointReader.cxx  PointReaderXyz.cxx  PointReaderXyzId.cxx  PointWriter.cxx  PointWriterMorpherXml.cxx  PointWriterXyz.cxx  PointWriterXyzId.cxx  PointWriterXyzVector.cxx  RegistrationProcrustesAlignment.cxx  RegistrationValidationSurface.cxx  RegistrationValidationSurfaceImage.cxx  (+24 more)
ui/: MainWindow.ui
